@@ -13,6 +13,7 @@
 extern void Init_simple_hash();
 extern void Init_fixnum_buffer();
 extern void Init_string_buffer();
+extern void Init_sized_queue();
 extern void Init_xmarshaled_queue();
 extern void Init_p_group_by();
 extern void Init_p_xgroup_by();
@@ -170,6 +171,7 @@ Init_fairy()
   Init_simple_hash();
   Init_fixnum_buffer();
   Init_string_buffer();
+  Init_xsized_queue();
   Init_xmarshaled_queue();
   Init_p_group_by();
   Init_p_xgroup_by();
