@@ -22,7 +22,7 @@ static VALUE SET_NO_IMPORT;
 VALUE rb_cFairyXSizedQueue;
 
 #define xsq(name) fairy_xsized_queue##name
-#define rb_xsq(name) rb_##xsq(name)
+#define rb_xsq(name) rb_fairy_xsized_queue##name
 
 typedef struct rb_xsq(_struct)
 {
@@ -38,8 +38,7 @@ typedef struct rb_xsq(_struct)
   
   VALUE queues;
   VALUE queues_mon;
-  long queues_cache_no;
-
+  
   VALUE pop_queue;
   VALUE pop_cv;
 
@@ -58,14 +57,14 @@ typedef struct rb_xsq(_struct)
 static void
 xsq(_mark)(void *ptr)
 {
-  xsq(_t) *mq = (xsq(_t)*)ptr;
+  xsq(_t) *sq = (xsq(_t)*)ptr;
   
-  rb_gc_mark(mq->push_queue);
-  rb_gc_mark(mq->push_cv);
-  rb_gc_mark(mq->queues);
-  rb_gc_mark(mq->queues_mon);
-  rb_gc_mark(mq->pop_queue);
-  rb_gc_mark(mq->pop_cv);
+  rb_gc_mark(sq->push_queue);
+  rb_gc_mark(sq->push_cv);
+  rb_gc_mark(sq->queues);
+  rb_gc_mark(sq->queues_mon);
+  rb_gc_mark(sq->pop_queue);
+  rb_gc_mark(sq->pop_cv);
 }
 
 static void
@@ -89,29 +88,28 @@ static VALUE
 xsq(_alloc)(VALUE klass)
 {
   VALUE volatile obj;
-  xsq(_t) *mq;
+  xsq(_t) *sq;
 
-  obj = TypedData_Make_Struct(klass, xsq(_t), &xsq(_data_type), mq);
+  obj = TypedData_Make_Struct(klass, xsq(_t), &xsq(_data_type), sq);
 
-  mq->chunk_size = 0;
-  mq->min_chunk_no = 0;
-  mq->queues_limit = 0;
+  sq->chunk_size = 0;
+  sq->min_chunk_no = 0;
+  sq->queues_limit = 0;
   
-  mq->push_queue = Qnil;
-  mq->push_cv = Qnil;
+  sq->push_queue = Qnil;
+  sq->push_cv = Qnil;
   
-  mq->queues = Qnil;
-  mq->queues_mon = Qnil;
-  mq->queues_cache_no = 0;
+  sq->queues = Qnil;
+  sq->queues_mon = Qnil;
 
-  mq->pop_queue = Qnil;
-  mq->pop_cv = Qnil;
+  sq->pop_queue = Qnil;
+  sq->pop_cv = Qnil;
 
-  mq->queue_push = NULL;
+  sq->queue_push = NULL;
 
-  mq->mon_synchronize = NULL;
-  mq->cv_wait = NULL;
-  mq->cv_broadcast = NULL;
+  sq->mon_synchronize = NULL;
+  sq->cv_wait = NULL;
+  sq->cv_broadcast = NULL;
   
   return obj;
 }
@@ -132,59 +130,59 @@ rb_xsq(_initialize)(VALUE self, VALUE policy, VALUE queues_mon, VALUE pop_cv)
   VALUE sz;
   VALUE flag;
   VALUE dir;
-  xsq(_t) *mq;
+  xsq(_t) *sq;
   
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
   
   sz = rb_fairy_conf("XSIZED_QUEUE_CHUNK_SIZE", policy, "chunk_size");
-  mq->chunk_size = NUM2LONG(sz);
+  sq->chunk_size = NUM2LONG(sz);
 
   sz = rb_fairy_conf("XSIZED_QUEUE_QUEUES_LIMIT",
 		     policy, "queues_limit");
-  mq->queues_limit = NUM2LONG(sz);
+  sq->queues_limit = NUM2LONG(sz);
 
   flag = rb_fairy_conf("XSIZED_QUEUE_USE_STRING_BUFFER",
 		       policy, "use_string_buffer");
-  mq->use_string_buffer_p = RTEST(flag);
+  sq->use_string_buffer_p = RTEST(flag);
 
   flag = rb_fairy_conf("XSIZED_QUEUE_LOG_MSTORE",
 		       policy, "log_mstore");
-  mq->log_mstore_p = RTEST(flag);
+  sq->log_mstore_p = RTEST(flag);
 
-  mq->queues = rb_xthread_fifo_new();
+  sq->queues = rb_xthread_fifo_new();
   if (NIL_P(queues_mon)) {
     queues_mon = rb_xthread_monitor_new();
   }
-  mq->buffers_mon = queues_mon;
+  sq->queues_mon = queues_mon;
   
-  mq->push_queue = Qnil;
-  mq->push_cv = rb_funcall(buffers_mon, rb_intern("new_cond"), 0);
+  sq->push_queue = Qnil;
+  sq->push_cv = rb_funcall(queues_mon, rb_intern("new_cond"), 0);
 
   if (NIL_P(pop_cv)) {
-    pop_cv = rb_funcall(buffers_mon, rb_intern("new_cond"), 0);
+    pop_cv = rb_funcall(queues_mon, rb_intern("new_cond"), 0);
   }
-  mq->pop_cv = pop_cv;
-  mq->pop_queue = Qnil;
+  sq->pop_cv = pop_cv;
+  sq->pop_queue = Qnil;
 
-  mq->queue_push = rb_xsq(_empty_push);
+  sq->queue_push = rb_xsq(_empty_push);
 
-  if (CLASS_OF(mq->queues_mon) == rb_cXThreadMonitor) {
-    mq->mon_synchronize = rb_xthread_monitor_synchronize;
-    mq->cv_wait = rb_xsq(_monitor_cond_wait);
-    mq->cv_broadcast = rb_xthread_monitor_cond_broadcast;
-    mq->cv_signal = rb_xthread_monitor_cond_signal;
+  if (CLASS_OF(sq->queues_mon) == rb_cXThreadMonitor) {
+    sq->mon_synchronize = rb_xthread_monitor_synchronize;
+    sq->cv_wait = rb_xsq(_monitor_cond_wait);
+    sq->cv_broadcast = rb_xthread_monitor_cond_broadcast;
+    sq->cv_signal = rb_xthread_monitor_cond_signal;
   }
-  else if (CLASS_OF(mq->queues_mon) == rb_cFiberMonMonitor) {
-    mq->mon_synchronize = rb_fibermon_monitor_synchronize;
-    mq->cv_wait = rb_fibermon_cond_wait;
-    mq->cv_signal = rb_fibermon_cond_signal;
-    mq->cv_broadcast = rb_fibermon_cond_broadcast;
+  else if (CLASS_OF(sq->queues_mon) == rb_cFiberMonMonitor) {
+    sq->mon_synchronize = rb_fibermon_monitor_synchronize;
+    sq->cv_wait = rb_fibermon_cond_wait;
+    sq->cv_signal = rb_fibermon_cond_signal;
+    sq->cv_broadcast = rb_fibermon_cond_broadcast;
   }
   else {
-    mq->mon_synchronize = rb_xsq(_genmon_synchronize);
-    mq->cv_wait = rb_xsq(_gencond_wait);
-    mq->cv_signal = rb_xsq(_gencond_signal);
-    mq->cv_broadcast = rb_xsq(_gencond_broadcast);
+    sq->mon_synchronize = rb_xsq(_genmon_synchronize);
+    sq->cv_wait = rb_xsq(_gencond_wait);
+    sq->cv_signal = rb_xsq(_gencond_signal);
+    sq->cv_broadcast = rb_xsq(_gencond_broadcast);
   }
 
   return self;
@@ -254,7 +252,7 @@ rb_xsq(_new)(VALUE policy, VALUE queues_mon, VALUE pop_cv)
   return self;
 }
 
-static VALUE rb_xsq(_buffers_push)(VALUE, VALUE);
+static VALUE rb_xsq(_queues_push)(VALUE, VALUE);
 static VALUE rb_xsq(_broadcast)(VALUE);
 static VALUE rb_xsq(_store)(VALUE, VALUE);
 static VALUE rb_xsq(_restore)(VALUE, VALUE);
@@ -262,59 +260,59 @@ static VALUE rb_xsq(_restore)(VALUE, VALUE);
 VALUE
 rb_xsq(_push)(VALUE self, VALUE e)
 {
-  xsq(_t) *mq;
+  xsq(_t) *sq;
 
-  GetFairyXSizedQueuePtr(self, mq);
-  return mq->queue_push(self, e);
+  GetFairyXSizedQueuePtr(self, sq);
+  return sq->queue_push(self, e);
 }
 
 static VALUE
 rb_xsq(_empty_push)(VALUE self, VALUE e)
 {
-  xsq(_t) *mq;
-  GetFairyXSizedQueuePtr(self, mq);
+  xsq(_t) *sq;
+  GetFairyXSizedQueuePtr(self, sq);
 
   if (EOS_P(e)) {
-    rb_xthread_fifo_push(mq->queues, e);
+    rb_xthread_fifo_push(sq->queues, e);
     return self;
   }
 
-  if (mq->use_string_buffer_p && CLASS_OF(e) == rb_cString) {
-    mq->push_queue = rb_fairy_string_buffer_new();
-    mq->queue_push = rb_xsq(_str_push);
+  if (sq->use_string_buffer_p && CLASS_OF(e) == rb_cString) {
+    sq->push_queue = rb_fairy_string_buffer_new();
+    sq->queue_push = rb_xsq(_str_push);
   }
   else {
-    mq->push_queue = rb_ary_new2(mq->min_chunk_no);
-    mq->queue_push = rb_xsq(_obj_push);
+    sq->push_queue = rb_ary_new2(sq->min_chunk_no);
+    sq->queue_push = rb_xsq(_obj_push);
   }
-  return mq->queue_push(self, e);
+  return sq->queue_push(self, e);
 }
 
 static VALUE
 rb_xsq(_obj_push)(VALUE self, VALUE e)
 {
-  xsq(_t) *mq;
-  GetFairyXSizedQueuePtr(self, mq);
+  xsq(_t) *sq;
+  GetFairyXSizedQueuePtr(self, sq);
 
   if (EOS_P(e)) {
-    rb_xsq(_queues_push)(self, mq->push_queue);
-    mq->push_queue = Qnil;
+    rb_xsq(_queues_push)(self, sq->push_queue);
+    sq->push_queue = Qnil;
     rb_xsq(_queues_push)(self, e);
     return self;
   }
 
-  if (mq->use_string_buffer_p && CLASS_OF(e) == rb_cString) {
-    rb_xsq(_queues_push)(self, mq->push_queue);
-    mq->push_queue = Qnil;
-    mq->queue_push = rb_xsq(_empty_push);
-    return mq->queue_push(self, e);
+  if (sq->use_string_buffer_p && CLASS_OF(e) == rb_cString) {
+    rb_xsq(_queues_push)(self, sq->push_queue);
+    sq->push_queue = Qnil;
+    sq->queue_push = rb_xsq(_empty_push);
+    return sq->queue_push(self, e);
   }
 
-  rb_ary_push(mq->push_queue, e);
-  if (RARRAY_LEN(mq->push_queue) >= mq->chunk_size || e == SET_NO_IMPORT) {
-    rb_xsq(_queues_push)(self, mq->push_queue);
-    mq->push_queue = Qnil;
-    mq->queue_push = rb_xsq(_empty_push);
+  rb_ary_push(sq->push_queue, e);
+  if (RARRAY_LEN(sq->push_queue) >= sq->chunk_size || e == SET_NO_IMPORT) {
+    rb_xsq(_queues_push)(self, sq->push_queue);
+    sq->push_queue = Qnil;
+    sq->queue_push = rb_xsq(_empty_push);
   }
   return self;
 }
@@ -322,25 +320,25 @@ rb_xsq(_obj_push)(VALUE self, VALUE e)
 static VALUE
 rb_xsq(_str_push)(VALUE self, VALUE e)
 {
-  xsq(_t) *mq;
+  xsq(_t) *sq;
   
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
   if (EOS_P(e)) {
-    rb_xsq(_queues_push)(self, mq->push_queue);
+    rb_xsq(_queues_push)(self, sq->push_queue);
     rb_xsq(_queues_push)(self, e);
     return self;
   }
 
   if (CLASS_OF(e) != rb_cString) {
-    rb_xsq(_queues_push)(self, mq->push_queue);
-    mq->push_queue = Qnil;
-    mq->queue_push = rb_xsq(_empty_push);
+    rb_xsq(_queues_push)(self, sq->push_queue);
+    sq->push_queue = Qnil;
+    sq->queue_push = rb_xsq(_empty_push);
   }
-  rb_fairy_string_buffer_push(mq->push_queue, e);
-  if (NUM2LONG(rb_fairy_string_buffer_size(mq->push_queue)) >= mq->chunk_size) {
-    rb_xsq(_queues_push)(self, mq->push_queue);
-    mq->push_queue = Qnil;
-    mq->queue_push = rb_xsq(_empty_push);
+  rb_fairy_string_buffer_push(sq->push_queue, e);
+  if (NUM2LONG(rb_fairy_string_buffer_size(sq->push_queue)) >= sq->chunk_size) {
+    rb_xsq(_queues_push)(self, sq->push_queue);
+    sq->push_queue = Qnil;
+    sq->queue_push = rb_xsq(_empty_push);
   }
   return self;
 }
@@ -348,26 +346,16 @@ rb_xsq(_str_push)(VALUE self, VALUE e)
 static VALUE
 rb_xsq(_push_raw)(VALUE self, VALUE raw)
 {
-  xsq(_t) *mq;
+  xsq(_t) *sq;
   
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
   
-  if (!NIL_P(mq->push_queue)) {
-    rb_xsq(_queues_push)QUEUE(self, mq->push_queue);
-    mq->push_queue = Qnil;
+  if (!NIL_P(sq->push_queue)) {
+    rb_xsq(_queues_push)(self, sq->push_queue);
+    sq->push_queue = Qnil;
   }
-  if (EOS_P(raw)) {
-    rb_xsq(_queues_push)(self, raw);
-  }
-  else {
-    if (mq->queues_cache_limit >= mq->queues_cache_no) { 
-      rb_xsq(_queues_push)(self, raw); 
-      mq->queues_cache_no++; 
-    } 
-    else { 
-      rb_xsq(_queues_push)(self, rb_xsq(_store_raw)(self, raw)); 
-    }
-  }
+  rb_xsq(_queues_push)(self, raw);
+
   return self;
 }
 
@@ -382,32 +370,32 @@ static VALUE rb_xsq(_push_sync)(struct rb_xsq(_queues_push_arg) *);
 static VALUE
 rb_xsq(_queues_push)(VALUE self, VALUE buf)
 {
-  xsq(_t) *mq;
+  xsq(_t) *sq;
   struct rb_xsq(_queues_push_arg) arg;
 
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
 
   arg.self = self;
   arg.buf = buf;
   
-  mq->mon_synchronize(mq->queues_mon,
+  sq->mon_synchronize(sq->queues_mon,
 		      rb_xsq(_push_sync), &arg);
 }
 
 static VALUE
 rb_xsq(_push_sync)(struct rb_xsq(_queues_push_arg) *arg)
 {
-  xsq(_t) *mq;
-  GetFairyXSizedQueuePtr(arg->self, mq);
+  xsq(_t) *sq;
+  GetFairyXSizedQueuePtr(arg->self, sq);
 
-  if (rb_xthread_fifo_length(mq->queues) > mq->queues_limit) {
-    while(rb_xthread_fifo_length(mq->queues) > mq->queues_limit) {
-      mq->cv_wait(mq->push_cv);
+  if (NUM2LONG(rb_xthread_fifo_length(sq->queues)) > sq->queues_limit) {
+    while(NUM2LONG(rb_xthread_fifo_length(sq->queues)) > sq->queues_limit) {
+      sq->cv_wait(sq->push_cv);
     }
   }
 
-  rb_xthread_fifo_push(mq->queues, arg->buf);
-  mq->cv_broadcast(mq->pop_cv);
+  rb_xthread_fifo_push(sq->queues, arg->buf);
+  sq->cv_broadcast(sq->pop_cv);
   return arg->self;
 }
 
@@ -422,53 +410,53 @@ static VALUE rb_xsq(_pop_wait)(struct rb_xsq(_pop_arg) *arg);
 VALUE
 rb_xsq(_pop)(VALUE self)
 {
-  xsq(_t) *mq;
+  xsq(_t) *sq;
   VALUE buf;
   struct rb_xsq(_pop_arg) arg;
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
 
-  while (NIL_P(mq->pop_queue) || RARRAY_LEN(mq->pop_queue) == 0) {
+  while (NIL_P(sq->pop_queue) || RARRAY_LEN(sq->pop_queue) == 0) {
     {
       arg.self = self;
       arg.buf = Qnil;
-      mq->mon_synchronize(mq->queues_mon,
+      sq->mon_synchronize(sq->queues_mon,
 			rb_xsq(_pop_wait), &arg);
       buf = arg.buf;
     }
 
     if (EOS_P(buf)) {
-      mq->pop_queue = rb_ary_new3(1, buf);
+      sq->pop_queue = rb_ary_new3(1, buf);
     }
     else {
-      if (CLASS_OF(buf) == rb_String) {
+      if (CLASS_OF(buf) == rb_cString) {
 	buf = rb_marshal_load(buf);
       }
       if (CLASS_OF(buf) == rb_cFairyStringBuffer) {
-	mq->pop_queue = rb_fairy_string_buffer_to_a(buf);
+	sq->pop_queue = rb_fairy_string_buffer_to_a(buf);
       }
       else {
-	mq->pop_queue = buf;
+	sq->pop_queue = buf;
       }
     }
   }
-  return rb_ary_shift(mq->pop_queue);
+  return rb_ary_shift(sq->pop_queue);
 }
 
 static VALUE
 rb_xsq(_pop_wait)(struct rb_xsq(_pop_arg) *arg)
 {
   VALUE self = arg->self;
-  xsq(_t) *mq;
+  xsq(_t) *sq;
   VALUE buf = Qnil;
 
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
   
-  buf = rb_xthread_fifo_pop(mq->queues);
+  buf = rb_xthread_fifo_pop(sq->queues);
   while (NIL_P(buf)) {
-    mq->cv_wait(mq->pop_cv);
-    buf = rb_xthread_fifo_pop(mq->queues);
+    sq->cv_wait(sq->pop_cv);
+    buf = rb_xthread_fifo_pop(sq->queues);
   }
-  mq->cv_signal(mq->push_cv);
+  sq->cv_signal(sq->push_cv);
   arg->buf = buf;
   return arg->self;
 }
@@ -476,16 +464,16 @@ rb_xsq(_pop_wait)(struct rb_xsq(_pop_arg) *arg)
 VALUE
 rb_xsq(_pop_raw)(VALUE self)
 {
-  xsq(_t) *mq;
+  xsq(_t) *sq;
   VALUE pop_raw = Qnil;
   VALUE buf;
   struct rb_xsq(_pop_arg) arg;
   
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
   {
     arg.self = self;
     arg.buf = Qnil;
-    mq->mon_synchronize(mq->queues_mon,
+    sq->mon_synchronize(sq->queues_mon,
 			rb_xsq(_pop_wait), &arg);
     buf = arg.buf;
   }
@@ -496,18 +484,17 @@ VALUE
 rb_xsq(_inspect)(VALUE self)
 {
   VALUE str;
-  xsq(_t) *mq;
+  xsq(_t) *sq;
 
-  GetFairyXSizedQueuePtr(self, mq);
+  GetFairyXSizedQueuePtr(self, sq);
 
-  str = rb_sprintf("<%s:%p chunk_size=%d, min_chunk_no=%d, wueues_cache_limit=%d use_string_bffer_p=%d queues_cache_no=%d>",
+  str = rb_sprintf("<%s:%p chunk_size=%d, min_chunk_no=%d, queues_limit=%d use_string_bffer_p=%d>",
 		   rb_obj_classname(self),
 		   (void*)self,
-		   mq->chunk_size,
-		   mq->min_chunk_no,
-		   mq->queues_cache_limit,
-		   mq->use_string_buffer_p,
-		   mq->queues_cache_no);
+		   sq->chunk_size,
+		   sq->min_chunk_no,
+		   sq->queues_limit,
+		   sq->use_string_buffer_p);
   return str;
 }
 
@@ -519,25 +506,19 @@ Init_xsized_queue()
   
   rb_cFairyFastTempfile = rb_const_get(rb_mFairy, rb_intern("FastTempfile"));
 
-  id_io = rb_intern("io");
-  id_open = rb_intern("open");
-  id_read = rb_intern("read");
-  id_write = rb_intern("write");
-  id_close = rb_intern("close");
-  id_close_bang = rb_intern("close!");
 
   SET_NO_IMPORT = rb_const_get(rb_cFairyImport, rb_intern("SET_NO_IMPORT"));
 
   rb_cFairyXSizedQueue  = rb_define_class_under(rb_mFairy, "XSizedQueue", rb_cObject);
 
-  xmq = rb_cFairyXSizedQueue;
+  xsq = rb_cFairyXSizedQueue;
   
-  rb_define_alloc_func(xmq, xsq(_alloc));
-  rb_define_method(xmq, "initialize", xsq(_initialize), -1);
-  rb_define_method(xmq, "push", rb_xsq(_push), 1);
-  rb_define_method(xmq, "push_raw", rb_xsq(_push_raw), 1);
-  rb_define_method(xmq, "pop", rb_xsq(_pop), 0);
-  rb_define_method(xmq, "pop_raw", rb_xsq(_pop_raw), 0);
-  rb_define_method(xmq, "inspect", rb_fairy_xsized__queue_inspect, 0);
+  rb_define_alloc_func(xsq, xsq(_alloc));
+  rb_define_method(xsq, "initialize", xsq(_initialize), -1);
+  rb_define_method(xsq, "push", rb_xsq(_push), 1);
+  rb_define_method(xsq, "push_raw", rb_xsq(_push_raw), 1);
+  rb_define_method(xsq, "pop", rb_xsq(_pop), 0);
+  rb_define_method(xsq, "pop_raw", rb_xsq(_pop_raw), 0);
+  rb_define_method(xsq, "inspect", rb_xsq(_inspect), 0);
 }
 
